--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
 [[plugins]]
 package = "@netlify/plugin-sitemap"
   [plugins.inputs]
-  baseUrl = "http://localhost:3333"
+  baseUrl = "https://lifesciencesbaltics-web.netlify.app"
   trailingSlash = true
   exclude = [
   	'./404',
