--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/gtm": "^2.4.0",
     "@nuxtjs/i18n": "^7.3.1",
+    "@nuxtjs/recaptcha": "^1.1.2",
     "axios": "^0.27.2",
     "core-js": "^3.25.3",
     "delicious-hamburgers": "^1.2.3",
