--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@ package = "@netlify/plugin-sitemap"
   baseUrl = "https://lifesciencesbaltics.com"
   trailingSlash = true
   exclude = [
-  	'./404',
-  	'./404/',
-  	'./dist/404.html'
+    '404',
+    '404/',
+    '404.html'
   ]
